# src/docs/swagger.yaml
@@ -164,13 +164,27 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para atualizar uma Amizade",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "amiz_id_mago_1": {
+                  "type": "number",
+                  "example": 1
+                },
+                "amiz_id_mago_2": {
+                  "type": "number",
+                  "example": 2
+                },
+                "amiz_data_do_inicio": {
+                  "type": "string",
+                  "example": "2003-09-03"
+                },
+                "amiz_status": {
+                  "type": "string",
+                  "example": "ativa"
                 }
               }
             }
@@ -341,13 +355,31 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para adicionar uma avaliação",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "ava_id_troca": {
+                  "type": "number",
+                  "example": 1
+                },
+                "ava_id_mago_avaliador": {
+                  "type": "number",
+                  "example": 2
+                },
+                "ava_pontuacao": {
+                  "type": "number",
+                  "example": 200
+                },
+                "ava_comentario": {
+                  "type": "string",
+                  "example": "Boa troca"
+                },
+                "ava_data_da_avaliacao": {
+                  "type": "string",
+                  "example": "2003-09-03"
                 }
               }
             }
@@ -510,13 +542,27 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para alterar uma conquista",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "conq_descricao_da_conquista": {
+                  "type": "string",
+                  "example": "Dados"
+                },
+                "conq_pontuacao": {
+                  "type": "number",
+                  "example": 200
+                },
+                "conq_tipo": {
+                  "type": "string",
+                  "example": "Bosses"
+                },
+                "conq_recompensa": {
+                  "type": "string",
+                  "example": "10 diamantes"
                 }
               }
             }
@@ -703,13 +749,39 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para adicionar uma habilidade",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "hab_nome_da_habilidade": {
+                  "type": "string",
+                  "example": "bola de fogo"
+                },
+                "hab_descricao": {
+                  "type": "string",
+                  "example": "Lança uma bola de fogo"
+                },
+                "hab_nivel_de_dificuldade": {
+                  "type": "number",
+                  "example": 1
+                },
+                "hab_escola_de_magia": {
+                  "type": "string",
+                  "example": "piromancia"
+                },
+                "hab_dano": {
+                  "type": "number",
+                  "example": 100
+                },
+                "hab_mana": {
+                  "type": "number",
+                  "example": 50
+                },
+                "hab_cooldown": {
+                  "type": "number",
+                  "example": 10
                 }
               }
             }
@@ -872,13 +944,27 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para adicionar uma habilidade",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "int_id_mago": {
+                  "type": "number",
+                  "example": 1
+                },
+                "int_id_habilidade": {
+                  "type": "number",
+                  "example": 1
+                },
+                "int_nivel_de_interesse": {
+                  "type": "number",
+                  "example": 11
+                },
+                "int_data_de_registro": {
+                  "type": "string",
+                  "example": "2003-09-03"
                 }
               }
             }
@@ -1065,13 +1151,39 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para adicionar uma Itens Trocados",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "troca_id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "item_nome": {
+                  "type": "string",
+                  "example": "bola de fogo"
+                },
+                "item_descricao": {
+                  "type": "string",
+                  "example": "lança uyma bola de fogo"
+                },
+                "item_nivel_de_dificuldade": {
+                  "type": "number",
+                  "example": 1
+                },
+                "item_escola_de_magia": {
+                  "type": "string",
+                  "example": "piromancia"
+                },
+                "item_dano": {
+                  "type": "number",
+                  "example": 100
+                },
+                "item_mana": {
+                  "type": "number",
+                  "example": 50
                 }
               }
             }
@@ -1437,16 +1549,19 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para Inserir um novo mago",
             "schema": {
               "type": "object",
               "properties": {
-                "mag_id": {
-                  "example": "any"
-                },
                 "conq_id": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 1
+                },
+                "conq_data_da_conquista": {
+                  "type": "string",
+                  "example": "2000-01-01"
                 }
               }
             }
@@ -1613,13 +1728,27 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para Inserir um novo mago",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "msg_remetente": {
+                  "type": "string",
+                  "example": "mago 1"
+                },
+                "msg_destinatario": {
+                  "type": "string",
+                  "example": "mago 2"
+                },
+                "msg_conteudo": {
+                  "type": "string",
+                  "example": "deu boa aqui a troca"
+                },
+                "msg_data_de_envio": {
+                  "type": "string",
+                  "example": "2003-09-03"
                 }
               }
             }
@@ -1774,13 +1903,23 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "json",
             "in": "body",
+            "description": "Dados para Inserir um novo mago",
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
+                "troca_id_mago_ofertante": {
+                  "type": "number",
+                  "example": 1
+                },
+                "troca_id_mago_interessado": {
+                  "type": "number",
+                  "example": 1
+                },
+                "troca_data": {
+                  "type": "string",
+                  "example": "2003-09-03"
                 }
               }
             }
@@ -1824,7 +1963,7 @@
           {
             "name": "json",
             "in": "body",
-            "description": "Dados para Atualize um login",
+            "description": "Dados para autenticar um login",
             "schema": {
               "type": "object",
               "properties": {
@@ -1870,7 +2009,7 @@
           {
             "name": "json",
             "in": "body",
-            "description": "Dados para Atualize um login",
+            "description": "Dados para atualizar um login",
             "schema": {
               "type": "object",
               "properties": {
